# active-directory-audit-platform

./: .dockerignore  .env.example  .gitignore  DATABASE-ACCESS.md  LICENSE  README.md  check.md  docker-compose.db-ports.yml  docker-compose.dev.yml  docker-compose.yml  open-dbs.bat  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_engagement_notes.py  0003_add_bloodhound_zip_source_type.py  0004_engagement_members.py  0005_user_token_version_last_login.py  0006_auth_tokens.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: admin.py  analyses.py  auth.py  engagements.py  ldap_collector.py  llm_settings.py  mitre.py  paths.py  reports.py  stats.py  ws.py
backend/app/core/: audit.py  auth_tokens.py  engagement_access.py  exceptions.py  logging.py  notifications.py  password_policy.py  rate_limit.py  security.py
backend/app/models/: __init__.py  analysis.py  audit_log.py  auth_token.py  engagement.py  engagement_member.py  setting.py  user.py
backend/app/modules/: agent.py  ingestion.py  ldap_collector.py  mitre.py  paths.py  remediation.py  report.py
backend/app/modules/llm_providers/: anthropic_provider.py  azure_provider.py  base.py  google_provider.py  mistral_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
backend/app/schemas/: analysis.py  auth.py  engagement.py  path.py
backend/data/: compliance_mapping.json  mitre_mapping.json  sample_graph.json
backend/data/prompts/: analyze_path.txt  executive_summary.txt
backend/templates/: report_pdf.html  report_styles.css
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_pipeline.py  test_websocket.py
backend/tests/unit/: test_agent.py  test_ingestion.py  test_mitre.py  test_paths.py  test_remediation.py  test_report.py  test_security.py
caddy/: Caddyfile  Caddyfile.dev
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  guide_complet.html
frontend/: Dockerfile  nginx.conf
frontend/css/: base.css  components.css  dashboard.css  guide.css  redesign.css  toast.css  tokens.css
frontend/js/: api.js  auth.js  dashboard.js  engagement.js  missions.js  path_detail.js  settings.js  status_chips.js  toast.js  upload.js  users.js  ws_client.js
(+11 files in other folders)
